--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ egui_tiles = "*"
 rand = "*"
 serialport = "4.6.1"
 egui_material_icons = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
