--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serialport = "4.6.1"
 egui_material_icons = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+egui_plot = "*"
